# Folder_Base_ToDo_List

./: INSTALL.md  LICENSE  MANIFEST.in  README.md  collapsible_example.md  example_todo.md  example_todo_with_tags.md  example_usage.py  example_usage_with_tags.py  folder_todo_generator.py  pyproject.toml  setup.py
UNKNOWN.egg-info/: SOURCES.txt
folder_todo_generator/: __init__.py  cli.py  generator.py
folder_todo_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
